# Rezepte

./: .gitignore  CMakeLists.txt  README.md
executables/: Rezepte
informations/: README.md
recipes/: README.md
sources/application/: Menu.c  Recipes.c  main.c
sources/general_headers/: Config.h  Platform.h  Types.h
sources/headers/: Menu.h  Recipes_data.h  main.h
